# endpoint-protocol

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml  readme.md  result
.github/workflows/: openpgp-wheels.yml
endpoint/: __init__.py  cli.py  client_core.py  config.py  contact.py  credentials.py  crypto.py  errors.py  protocol.py  server_core.py  storage.py  transport.py
openpgp-sequoia/: Cargo.toml  pyproject.toml
openpgp-sequoia/src/: lib.rs
tests/: conftest.py  test_cli.py  test_endpoint_e2e.py
