[package]
name = "endpoint-openpgp-sequoia"
version = "0.1.0"
edition = "2021"

[lib]
name = "endpoint_openpgp_sequoia"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }
sequoia-openpgp = { version = "2.3", default-features = false, features = ["compression", "compression-bzip2", "compression-deflate", "crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("gil-refs"))'] }
